flowc/tests/fixtures/resolve_e127_ambiguous_variant.flow
type TaskState =
  | Pending { task_id: string }
  | Done { task_id: string }

type ReviewState =
  | Pending { review_id: string }
  | Approved { review_id: string }

flow start(string) -> TaskState {
  Pending { task_id: it }
}
